# qiwi-rs

./: Cargo.toml  README.md
qiwi/: Cargo.toml
qiwi-cli/: Cargo.toml
qiwi-cli/src/: main.rs
qiwi/src/: lib.rs  models.rs  transport.rs
