[package]
name = "qiwi"
version = "0.1.0"
description = "Qiwi API library"
repository = "https://github.com/vorot93/qiwi-rs"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
categories = ["api"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = { repository = "vorot93/qiwi-rs" }
maintenance = { status = "actively-developed" }

[dependencies]
async-stream = "*"
bigdecimal = "*"
chrono = { version = "*", features = ["serde"] }
derive_more = "*"
headers = "0.3"
http = "0.2"
itertools = "*"
log = "*"
maplit = "1"
penny = "*"
phonenumber = "*"
reqwest = { git = "https://github.com/seanmonstar/reqwest", features = ["json"] }
reqwest-ext = { git = "https://github.com/vorot93/reqwest-ext", branch = "dev" }
ron = "*"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "*"
snafu = "*"
tokio = { version = "0.2 ", features = ["stream"] }
uuid = { version = "*", features = ["v4"] }
